// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutMe renders properly on different display sizes 1`] = `
<div
  style="width: 1024px; height: 768px;"
>
  <div
    class="css-ccy2vc"
  >
    <nav
      class="css-zw4cqh"
    >
      <a
        class="css-42nl7f"
        href="#main"
      >
        Skip to main content
      </a>
      <div
        class="css-1iarqv4"
      >
        <a
          class="css-1x0xomp"
          href="/"
        >
          <h1
            class="css-dj9cgy"
          >
            Kayla Le
          </h1>
        </a>
        <h2
          class="css-1b38hje"
        >
          Software Engineer
        </h2>
      </div>
      <div
        class="css-1p063y5"
      >
        <a
          class="css-23kpuw"
          href="/about-me"
        >
          About me
        </a>
        <nav
          class="css-z6jdx8"
        >
          <button
            aria-controls="dropdown1"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="css-4r3yzx"
          >
            Projects
            <div
              class="css-144hx5m"
              role="none"
            >
              ▼
            </div>
          </button>
        </nav>
      </div>
    </nav>
    <div
      class="css-v2kfba"
      id="main"
      role="none"
      tabindex="-1"
    >
      <div
        class="css-1qe9sr2"
      >
        <img
          alt="Professional head shot of myself"
          class="css-cwyjqr"
          src="test-file-stub"
        />
        <p
          class="css-ocylvi"
        >
          Hi!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`AboutMe renders properly on different display sizes 2`] = `
<div
  style="width: 375px; height: 812px;"
>
  <div
    class="css-ccy2vc"
  >
    <nav
      class="css-zw4cqh"
    >
      <a
        class="css-42nl7f"
        href="#main"
      >
        Skip to main content
      </a>
      <div
        class="css-1iarqv4"
      >
        <a
          class="css-1x0xomp"
          href="/"
        >
          <h1
            class="css-dj9cgy"
          >
            Kayla Le
          </h1>
        </a>
        <h2
          class="css-1b38hje"
        >
          Software Engineer
        </h2>
      </div>
      <div
        class="css-1p063y5"
      >
        <a
          class="css-23kpuw"
          href="/about-me"
        >
          About me
        </a>
        <nav
          class="css-z6jdx8"
        >
          <button
            aria-controls="dropdown1"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="css-4r3yzx"
          >
            Projects
            <div
              class="css-144hx5m"
              role="none"
            >
              ▼
            </div>
          </button>
        </nav>
      </div>
    </nav>
    <div
      class="css-v2kfba"
      id="main"
      role="none"
      tabindex="-1"
    >
      <div
        class="css-1qe9sr2"
      >
        <img
          alt="Professional head shot of myself"
          class="css-cwyjqr"
          src="test-file-stub"
        />
        <p
          class="css-ocylvi"
        >
          Hi!
        </p>
      </div>
    </div>
  </div>
</div>
`;
